--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "hi": "./bin/helloworld.js"
+    "hi": "./bin/helloworld.js",
+    "vresume": "./bin/vresume.js"
   },
   "repository": {
     "type": "git",
@@ -24,13 +25,14 @@
   },
   "homepage": "https://github.com/vadxq/vadxqResume#readme",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "commander": "^4.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-preset-latest-node": "^4.0.1"
+    "babel-preset-latest-node": "^4.0.1",
+    "babel-preset-stage-3": "^6.24.1"
   }
 }
