--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "前端简历生成",
   "author": "vadxq",
   "bin": {
-    "vresume": "./bin/run"
+    "vresume": "./bin/vresume.js"
   },
   "bugs": "https://github.com/vadxq/vadxqResume.git/issues",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/node": "^10.17.12",
+    "@types/node": "^10.17.13",
+    "commander": "^4.0.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
@@ -29,5 +29,10 @@
     "url": "git+https://github.com/vadxq/vadxqResume.git"
   },
   "scripts": {
+    "build": "tec",
+    "start":"ts-node bin/vresume.ts",
+    "prepublish": "npm run build",
+    "postpublish": "npm run build:clear",
+    "build:clear": "find ./actions ./bin ./commands ./utils ./ui ./component -type f -name '*.d.ts' -delete & find ./actions ./bin ./commands ./utils ./ui ./component -type f -not -name '*.ts*' -delete"
   }
 }
