--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^10.17.13",
+    "@types/react": "^16.9.17",
     "commander": "^4.0.1",
+    "ink": "^2.6.0",
+    "react": "^16.12.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
@@ -30,7 +33,7 @@
   },
   "scripts": {
     "build": "tec",
-    "start":"ts-node bin/vresume.ts",
+    "start": "ts-node bin/vresume.ts",
     "prepublish": "npm run build",
     "postpublish": "npm run build:clear",
     "build:clear": "find ./actions ./bin ./commands ./utils ./ui ./component -type f -name '*.d.ts' -delete & find ./actions ./bin ./commands ./utils ./ui ./component -type f -not -name '*.ts*' -delete"
