--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/node": "^10.17.13",
     "@types/react": "^16.9.17",
+    "axios": "^0.19.0",
     "commander": "^4.0.1",
     "ink": "^2.6.0",
     "react": "^16.12.0",
